--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "a-vue-starter",
+  "name": "KinBoard",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -23,6 +23,7 @@
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "@vue/eslint-config-prettier": "^6.0.0",
+    "axios": "^0.18.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.1.3",
@@ -31,6 +32,7 @@
     "prettier": "^1.19.1",
     "sass": "^1.32.0",
     "sass-loader": "^10.0.0",
+    "vue-cli-plugin-axios": "~0.0.4",
     "vue-cli-plugin-vuetify": "~2.2.2",
     "vue-template-compiler": "^2.6.11",
     "vuetify-loader": "^1.7.0"
